--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: python
 python:
-  - 2.4
   - 2.5
   - 2.6
   - 2.7
 install: 
   - pip install -r requirements.txt --use-mirrors
 script:  
-  - nosetests tests
+  - nosetests tests -s
