--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ python:
 install: 
   - pip install -r requirements.txt --use-mirrors
 script:  
-  - nosetests tests/test.py:FindTest.test_ignore -s
+  - nosetests tests -s
