--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ python:
   - 3.2
 install: 
   - pip install -r requirements.txt --use-mirrors
+  - "if [[ $TRAVIS_PYTHON_VERSION != '3.2' ]]; then pip install -i http://simple.crate.io Pillow; fi"
 script:  
   - nosetests tests -s
