--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
   - 3.2
 install: 
   - pip install -r requirements.txt --use-mirrors
-  - "if [[ $TRAVIS_PYTHON_VERSION != '3.2' ]]; then pip install -i http://simple.crate.io Pillow; fi"
+  - "if [[ $TRAVIS_PYTHON_VERSION != '3.2' ]]; then pip install -i http://simple.crate.io Pillow==1.7.8; fi"
+  - "if [[ $TRAVIS_PYTHON_VERSION == '3.2' ]]; then pip install -i http://simple.crate.io Pillow==2.1.0; fi"
 script:  
   - nosetests tests -s
