--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: python
 python:
-  - 2.5
-  - 2.6
   - 2.7
-  - 3.2
+  - 3.4
+  - 3.5
+  - 3.6
+  - 3.7
 install: 
-  - pip install -r requirements.txt --use-mirrors
-  - "if [[ $TRAVIS_PYTHON_VERSION != '3.2' ]]; then pip install -i http://simple.crate.io Pillow==1.7.8; fi"
-  - "if [[ $TRAVIS_PYTHON_VERSION == '3.2' ]]; then pip install -i http://simple.crate.io Pillow==2.1.0; fi"
+  - pip install Pillow
 script:  
   - nosetests tests -s
