--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,12 +1,21 @@
 version = 1
 
 test_patterns = [
-  "tests/*"
+  'tests/*'
+]
+
+exclude_patterns = [
+  
 ]
 
 [[analyzers]]
-name = "python"
+name = 'python'
 enabled = true
+runtime_version = '3.x.x'
+dependency_file_paths = [
+  "requirements.txt",
+  "dev-requirements.txt"
+]
 
   [analyzers.meta]
-  runtime_version = "3.x.x"
+  max_line_length = 100
