--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,11 +14,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: ["3.9"]
+        python: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.10
+    - name: Set up Python ${{ matrix.python }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python }}
@@ -32,6 +32,12 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with nosetests
+    - name: pydocstyle
       run: |
-        nosetests tests
+        pydocstyle pathfinder tests
+    - name: isort
+      run: |
+        isort pathfinder tests -c --profile black
+    - name: Test with pytest
+      run: |
+        PYTHONPATH=. pytest tests
